--- a/index.html
+++ b/index.html
@@ -132,10 +132,65 @@
                     </div>
                 </div>
                 <!-- product end -->
-                <a href="about.html" class="nav-item nav-link">Solutions</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
-                <a href="project.html" class="nav-item nav-link">Project</a>
+                <!-- solution nav starts -->
                 <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Solutions</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <!-- <a href="feature.html" class="dropdown-item">Solar Energy </a> -->
+                        <div class="sub-dropdown">
+                            <a class="sub-dropbtn">Solar Energy Services <i class="fas fa-angle-down"></i></a>
+                            <div class="sub-dropdown-content">
+                                <a href="#">Solar Financing</a>
+                                <a href="#">Solar Consultation</a>
+                            </div>
+                        </div>
+                        <div class="sub-dropdown">
+                            <a class="sub-dropbtn">Pest Controls <i class="fas fa-angle-down"></i></a>
+                            <div class="sub-dropdown-content">
+                                <a href="#">Subpages</a>
+                                <a href="#">Subpages</a>
+                                <a href="#">Subpages</a>
+                            </div>
+                        </div>
+                        <a href="#" class="dropdown-item">&nbsp;Plumbing / Fabrication & Electrical Work</a>
+                        <a href="#" class="dropdown-item">&nbsp;Sales & Services</a>
+                        <a href="#" class="dropdown-item">&nbsp;AMC</a>
+                    </div>
+                </div>
+
+                <!-- solution nav ends -->
+                <!-- Learning nav starts -->
+                <div class="nav-item dropdown">
+                    <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Learning</a>
+                    <div class="dropdown-menu bg-light m-0">
+                            <a href="" class="dropdown-item">Solar Panel</a>
+                            <a href="" class="dropdown-item">Solar Systems</a>
+                            <a href="" class="dropdown-item">Solar Power Systems</a>
+                            <a href="" class="dropdown-item">About Subsidy</a>
+                            <a href="" class="dropdown-item">Solar Panel Structure</a>
+                            <a href="" class="dropdown-item">Solar Inverter</a>
+                            <a href="" class="dropdown-item">Solar Panel Maintenance</a>
+                    </div>
+                </div>
+                
+                <!-- Learning nav ends -->
+                <!-- More nav starts -->
+                           <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">More</a>
+                            <div class="dropdown-menu bg-light m-0">
+                                <a href="" class="dropdown-item">Download</a>
+                                <a href="" class="dropdown-item">News</a>
+                                <a href="" class="dropdown-item">Gallery</a>
+                                <a href="" class="dropdown-item">Videos</a>
+                                <a href="" class="dropdown-item">Rich Us</a>
+                                <a href="" class="dropdown-item">Career With Us</a>
+                                <a href="" class="dropdown-item">Partner With Us </a>
+                            </div>
+                           </div>     
+                <!-- More nav Ends -->
+
+                <a href="project.html" class="nav-item nav-link">Help & Support</a>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="feature.html" class="dropdown-item">Feature</a>
@@ -143,11 +198,11 @@
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div> -->
+                <a href="contact.html" class="nav-item nav-link">Solar Calculator</a>
             </div>
-            <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Get A Quote<i
-                    class="fa fa-arrow-right ms-3"></i></a>
+            <!-- <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Get A Quote<i
+                    class="fa fa-arrow-right ms-3"></i></a> -->
         </div>
     </nav>
     <!-- Navbar End -->
