--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Company</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">About</a>
+                        <a href="about.html" class="dropdown-item">About</a>
                         <a href="quote.html" class="dropdown-item">The Sunspeed Advantages</a>
                         <a href="team.html" class="dropdown-item">Who We are</a>
                         <a href="testimonial.html" class="dropdown-item">What We Do</a>
