--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Company</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="about.html" class="dropdown-item">About</a>
-                        <a href="quote.html" class="dropdown-item">The Sunspeed Advantages</a>
+                        <a href="sunspeed_advtges.html" class="dropdown-item">The Sunspeed Advantages</a>
                         <a href="team.html" class="dropdown-item">Who We are</a>
                         <a href="testimonial.html" class="dropdown-item">What We Do</a>
                         <a href="testimonial.html" class="dropdown-item">Our Story & Logo</a>
