3 pages and nav

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="dropdown-menu bg-light m-0">
                         <a href="about.html" class="dropdown-item">About</a>
                         <a href="sunspeed_advtges.html" class="dropdown-item">The Sunspeed Advantages</a>
-                        <a href="team.html" class="dropdown-item">Who We are</a>
-                        <a href="testimonial.html" class="dropdown-item">What We Do</a>
+                        <a href="who_we.html" class="dropdown-item">Who We are</a>
+                        <a href="what_wedo.html" class="dropdown-item">What We Do</a>
                         <a href="testimonial.html" class="dropdown-item">Our Story & Logo</a>
                         <a href="testimonial.html" class="dropdown-item">Our Journey</a>
                         <a href="testimonial.html" class="dropdown-item">Why Sunspeed</a>
