--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="sub-dropdown">
                             <a class="sub-dropbtn">Solar Energy <i class="fas fa-angle-down"></i></i></a>
                             <div class="sub-dropdown-content">
-                                <a href="#">Solar Water Heater </a>
+                                <a href="./SolarWaterHeater.html">Solar Water Heater </a>
                                 <a href="#">On-Grid Rooftop</a>
                                 <a href="#">Off-Grid Rooftop </a>
                                 <a href="#">Hybrid Rooftop</a>
